# deb

./: .clang-format  .clang-tidy  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  README.md  THIRD_PARTY_NOTICES
.github/workflows/: main.yml
benchmark/: Blake3RandomGenerator.hpp  CMakeLists.txt  benchmark.cpp  benchmark_blake3.cpp
cmake/: CPM.cmake  bundling.cmake  debConfig.cmake.in  warnings.cmake
examples/: CMakeLists.txt  CustomRNG.cpp  EnDecryption-MultiSecret.cpp  EnDecryption.cpp  ExampleUtils.cpp  ExampleUtils.hpp  KeyGeneration.cpp  SeedOnlySecretKey.cpp  Serialization.cpp  SodiumRandomGenerator.hpp
include/deb/: CKKSTypes.hpp  Decryptor.hpp  Encryptor.hpp  KeyGenerator.hpp  Preset.hpp  SecretKeyGenerator.hpp  SeedGenerator.hpp  Types.hpp
include/deb/utils/: Basic.hpp  ModArith.hpp  NTT.hpp  PresetTraits.hpp
prebuild/: CMakeLists.txt  DebCustomParamPreset.json  DebFBType.fbs  DebGenParam.cpp  DebParamPreset.json  DebPreComputeUtils.hpp
scripts/: oss-release.sh
src/: AleaRandomGenerator.cpp  CKKSTypes.cpp  Context.cpp  Decryptor.cpp  Encryptor.cpp  FFT.cpp  KeyGenerator.cpp  ModArith.cpp  NTT.cpp  OmpUtils.cpp  Preset.cpp  RandomGenerator.cpp  SecretKeyGenerator.cpp  SeedGenerator.cpp  Serialize.cpp
test/: CMakeLists.txt  EnDecryption-test.cpp  KeyGen-test.cpp  NTT-test.cpp  Operation-test.cpp  Serialize-test.cpp  TestBase.hpp
